// Copyright 2017 Capsule8 Inc. All rights reserved.

syntax = "proto3";

package capsule8.apiserver.v0;
option go_package = "github.com/capsule8/reactive8/pkg/api/apiserver";

import "event/v0/subscription.proto";

// Subscription heartbeat from API that includes some subscription/client info
message SubscriptionHeartbeat {
    string subscription_id = 1;
    string client_id = 2;
    capsule8.event.v0.Subscription subscription = 3;
}
